--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,7 +4,7 @@ on:
     branches: [main]
 jobs:
   install:
-    runs-on: ubuntu-latest
+    runs-on: bee
     steps:
       - uses: actions/checkout@v4
         with:
