gitlab-ci: deploy to T150

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,8 @@
 image: node:20-alpine
 stages:
   - build
+  - upload
+  - restart
 
 build:
   environment:
@@ -10,9 +12,17 @@ build:
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
     GIT_SUBMODULE_FORCE_HTTPS: "true"
+    HOST: 'ocop@route.ocopee.com'
+    PORT: '28'
+    RSA: $OCOP_RSA
+    REMOTE: '/home/ocop/ocopee/ocopee_ui'
   before_script:
     - apk update
     - apk add rsync openssh
+    - echo "$RSA" > rsa.cert
+    - chmod 400 ./rsa.cert
+    - echo "$ENV" > .env
+    - echo "NODE_ENV='production'" >> .env
   script:
     - chmod +x ./scripts/build-ci.next.sh;
     - source ./scripts/build-ci.next.sh;
@@ -28,3 +38,50 @@ build:
   rules:
     - if: ($CI_COMMIT_BRANCH == "main")
 
+upload:
+  environment:
+    name: $CI_COMMIT_BRANCH
+    url: https://ocopee.com
+  stage: upload
+  variables:
+    GIT_SUBMODULE_STRATEGY: recursive
+    GIT_SUBMODULE_FORCE_HTTPS: "true"
+    HOST: 'ocop@route.ocopee.com'
+    PORT: '28'
+    RSA: $OCOP_RSA
+    REMOTE: '/home/ocop/ocopee/ocopee_ui'
+  before_script:
+    - apk update
+    - apk add rsync openssh
+    - echo "$RSA" > rsa.cert
+    - chmod 400 ./rsa.cert
+    - echo "$ENV" > .env
+    - echo "NODE_ENV='production'" >> .env
+  needs: ["build"]
+  script:
+    - chmod +x ./scripts/upload-ci.sh
+    - source ./scripts/upload-ci.sh
+  rules:
+    - if: ($CI_COMMIT_BRANCH == "main")
+
+restart:
+  environment:
+    name: $CI_COMMIT_BRANCH
+    url: https://ocopee.com
+  stage: restart
+  variables:
+    HOST: 'ocop@route.ocopee.com'
+    PORT: '28'
+    RSA: $OCOP_RSA
+    REMOTE: '/home/ocop/ocopee/ocopee_ui'
+  before_script:
+    - apk update
+    - apk add rsync openssh
+    - echo "$RSA" > rsa.cert
+    - chmod 400 ./rsa.cert
+  needs: ["upload"]
+  script:
+    - chmod +x ./scripts/restart-ci.sh
+    - source ./scripts/restart-ci.sh
+  rules:
+    - if: ($CI_COMMIT_BRANCH == "main")
