gitlab0ci: Uploading artifacts as "archive" to coordinator

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 image: node:20-alpine
 stages:
   - build
-  - upload
+  # - upload
   - restart
 
 build:
@@ -24,8 +24,12 @@ build:
     - echo "$ENV" > .env
     - echo "NODE_ENV='production'" >> .env
   script:
+    # build
     - chmod +x ./scripts/build-ci.next.sh;
     - source ./scripts/build-ci.next.sh;
+    # upload
+    - chmod +x ./scripts/upload-ci.sh
+    - source ./scripts/upload-ci.sh
   cache:
     key:
       files:
@@ -37,35 +41,35 @@ build:
       - .npm/
   rules:
     - if: ($CI_COMMIT_BRANCH == "main")
-  artifacts:
-    paths:
-      - out.tar.gz
+  # artifacts:
+  #   paths:
+  #     - out.tar.gz
 
-upload:
-  environment:
-    name: $CI_COMMIT_BRANCH
-    url: https://ocopee.com
-  stage: upload
-  variables:
-    GIT_SUBMODULE_STRATEGY: recursive
-    GIT_SUBMODULE_FORCE_HTTPS: "true"
-    HOST: 'ocop@route.ocopee.com'
-    PORT: '28'
-    RSA: $OCOP_RSA
-    REMOTE: '/home/ocop/ocopee/ocopee_ui'
-  before_script:
-    - apk update
-    - apk add rsync openssh
-    - echo "$RSA" > rsa.cert
-    - chmod 400 ./rsa.cert
-    - echo "$ENV" > .env
-    - echo "NODE_ENV='production'" >> .env
-  needs: ["build"]
-  script:
-    - chmod +x ./scripts/upload-ci.sh
-    - source ./scripts/upload-ci.sh
-  rules:
-    - if: ($CI_COMMIT_BRANCH == "main")
+# upload:
+#   environment:
+#     name: $CI_COMMIT_BRANCH
+#     url: https://ocopee.com
+#   stage: upload
+#   variables:
+#     GIT_SUBMODULE_STRATEGY: recursive
+#     GIT_SUBMODULE_FORCE_HTTPS: "true"
+#     HOST: 'ocop@route.ocopee.com'
+#     PORT: '28'
+#     RSA: $OCOP_RSA
+#     REMOTE: '/home/ocop/ocopee/ocopee_ui'
+#   before_script:
+#     - apk update
+#     - apk add rsync openssh
+#     - echo "$RSA" > rsa.cert
+#     - chmod 400 ./rsa.cert
+#     - echo "$ENV" > .env
+#     - echo "NODE_ENV='production'" >> .env
+#   needs: ["build"]
+#   script:
+#     - chmod +x ./scripts/upload-ci.sh
+#     - source ./scripts/upload-ci.sh
+#   rules:
+#     - if: ($CI_COMMIT_BRANCH == "main")
 
 restart:
   environment:
@@ -82,7 +86,7 @@ restart:
     - apk add rsync openssh
     - echo "$RSA" > rsa.cert
     - chmod 400 ./rsa.cert
-  needs: ["upload"]
+  needs: ["build"]
   script:
     - chmod +x ./scripts/restart-ci.sh
     - source ./scripts/restart-ci.sh
