--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "20.9.1",
     "@types/react": "18.2.37",
     "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "date-fns": "^3.0.6",
     "graphql": "^16.8.1",
     "lucide-react": "^0.303.0",
